# guardi-vpn

./: .gitignore  ACM  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: build_win.sh  dev.sh
src/: lib.rs  main.rs
src/constructors/: mod.rs  node.rs  sniffer.rs
src/interceptor/: mod.rs  parser.rs  sniffer.rs
src/network/: broadcast.rs  discovery.rs  mod.rs  p2p.rs  ping.rs  score.rs  select.rs  xml.rs
src/terminal/: user_input.rs
src/tunnel/: mod.rs  proxy.rs
