[package]
name = "guardi-vpn"
version = "0.0.1"
edition = "2024"

[dependencies]
# The asynchronous runtime needed for main.rs and proxy.rs
tokio = { version = "1.49", features = ["full"] }

# Required for network/ping.rs and tunnel/proxy.rs
libp2p = "0.53"

# Future use for interceptor/sniffer.rs
# windivert = "0.3" 

# Error handling
byteorder = "1.5.0"
uuid = { version = "1.21.0", features = ["v4"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.27.2"
tun = "0.8.5"
dns-lookup = "3.0.1"
