[package]
name = "guardi-vpn"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clearscreen = "4.0.5"
command = "0.0.0"
either = "1.15.0"
env_logger = "0.11.9"
futures = "0.3.32"
futures-timer = "3.0.3"
libp2p = { version = "0.53", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Future use for interceptor/sniffer.rs
# windivert = "0.3" 

