[package]
name = "guardi-vpn"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clearscreen = "4.0.5"
color-eyre = "0.6.5"
command = "0.0.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
either = "1.15.0"
env_logger = "0.11.9"
futures = "0.3.32"
futures-timer = "3.0.3"
futures-util = "0.3.32"
libp2p = { version = "0.53", features = ["full"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.0"
ratatui = "0.30.0"
serde = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }

# Future use for interceptor/sniffer.rs
# windivert = "0.3" 

